# E2Etesting

./: .flake8  .gitignore  .pre-commit-config.yaml  README copy.md  README.md  convert.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  stale.yml
allure-results/: environment.properties
marl_bench/: __init__.py  generic_blend_maddpg.py  simple_spread_env.py
src/config/: data.csv
src/uitestsuite/driversetup/: create_driver.py
src/uitestsuite/inputs/upload_testdata/uploadfile_fail/: mpo.mpo  xlsm.xlsm
src/uitestsuite/inputs/upload_testdata/uploadfile_rvt/: dae.dae
src/uitestsuite/pageobject/: base_po.py  dataspace_po.py  fileattribute_po.py  fileinitialization_po.py  filelist_po.py  login_po.py  org_po.py  projectattribute_po.py  projectlist_po.py
src/uitestsuite/testcases/: Projectlist_test.py  conftest.py  test_base.py  test_dataspace.py  test_fileattribute.py  test_fileinitialization.py  test_fileupload.py  test_login.py  test_org.py  test_projectattribute.py  test_projectattributeextraction.py  test_projectlist.py
src/util/: common.py  file_operations.py  logger.py  readCSV.py  timestamp.py
