[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tektometesting"
version = "0.0.1"
description = "A testing framework for UI test suites and driver setup"
readme = "README.md"
authors = [
    { name = "Samuel", email = "samuel.a@tektome.com" }
]
keywords = ["testing", "automation", "ui", "webdriver"]

dependencies = [
"allure-pytest==2.13.5",
"allure-python-commons==2.13.5",
"attrs== 24.2.0",
"build== 1.2.2.post1",
"CacheControl==0.14.1",
"certifi==2024.8.30",
"cffi==1.17.1",
"charset-normalizer==3.3.2",
"cleo==2.1.0",
"crashtest==0.4.1",
"distlib==0.3.9",
"dulwich==0.21.7",
"fastjsonschema==2.21.1",
"filelock==3.16.1",
"h11==0.14.0",
"idna==3.10",
"iniconfig==2.0.0",
"installer==0.7.0",
"jaraco.classes==3.4.0",
"keyring==24.3.1",
"more-itertools==10.5.0",
"msgpack==1.1.0",
"outcome==1.3.0.post0",
"packaging==24.1",
"pbr==6.1.0",
"pexpect==4.9.0",
"pip==24.2",
"pkginfo==1.12.0",
"platformdirs==4.3.6",
"pluggy==1.5.0",
"poetry==1.8.5",
"poetry-core==1.9.1",
"poetry-plugin-export==1.8.0",
"ptyprocess==0.7.0",
"pycparser==2.22",
"pyproject_hooks==1.2.0",
"PySocks==1.7.1",
"pytest==8.3.3",
"python-dotenv==1.0.1",
"RapidFuzz==3.11.0",
"requests==2.32.3",
"requests-toolbelt==1.0.0",
"selenium==4.25.0",
"shellingham==1.5.4",
"sniffio==1.3.1",
"sortedcontainers 2.4.0",
"stevedore==  5.4.0",
"tektometesting 0.0.1",
"tomlkit==0.13.2",
"trio==0.26.2",
"trio-websocket==0.11.1",
"trove-classifiers==2024.10.21.16",
"typing_extensions==4.12.2",
"urllib3==2.2.3",
"virtualenv== 20.28.0",
"virtualenv-clone==0.5.7",
"virtualenvwrapper==6.1.1",
"webdriver-manager==4.0.2",
"websocket-client==1.8.0",
"wsproto==1.2.0",
"xattr==1.1.0",
]

[project.optional-dependencies]
dev = [
    "black",         
    "flake8",
    "isort",
    "pre-commit"    

]


[tool.black]
line-length = 120

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
lines_after_imports = 2
use_parentheses = true
profile = "black"
